syntax = "proto3";

package api;

option go_package="./api";

service SimulatorService {
    rpc SetUpSimulator(SetUpSimulatorRequest) returns (SetUpSimulatorResponse){}
    rpc RunSimulator(RunSimulatorRequest) returns (RunSimulatorResponse){}
    rpc GetNeighborAgents(GetNeighborAgentsRequest) returns (GetNeighborAgentsResponse){}
}

message SetUpSimulatorRequest{
    Area area = 1;
    Clock clock = 2;
	repeated Agent agents = 3;
    repeated Neighbor neighbors =4;
}

message SetUpSimulatorResponse{
    Status status = 1;
}

message RunSimulatorRequest{
    string sender_id = 1;
}

message RunSimulatorResponse{
    Status status = 1;
}

message GetNeighborAgentsRequest{
    string sender_id = 1;
    repeated Agent agents = 2;
}

message GetNeighborAgentsResponse{
    repeated Agent agents = 1;
    Status status = 2;
}

service EngineService {
    rpc RegisterSimulator(RegisterSimulatorRequest) returns (RegisterSimulatorResponse){}
}

message RegisterSimulatorRequest{
    string id = 1;
}

message RegisterSimulatorResponse{
    Status status = 1;
    uint64 port =2;
}

message Simulator {
    string id = 1;
	uint64 port = 2;
    repeated Neighbor neighbors = 3;
}

message Neighbor {
    string id = 1;
	uint64 port = 2;
}


enum Status {
    OK = 0;
    ERROR = 1;
}

message Agent {
	string id = 1;
	string name = 2;
	Position position = 3;
}

message Area {
    Space space = 1;
}

message Space {
    float min_x = 1;
    float min_y = 2;
    float max_x = 3;
    float max_y = 4;
}

message Clock {
    uint64 timestamp = 1;
}

message Position {
	float x = 1;
	float y = 2;
}
